--- a/index.html
+++ b/index.html
@@ -12,14 +12,37 @@
         <img src="#" alt="Brand">
         <nav id="nav-bar">
             <ul id="nav-links">
-                <li></li>
-                <li></li>
-                <li></li>
+                <li class="nav-link">Benefits</li>
+                <li class="nav-link">Ships</li>
+                <li class="nav-link">More</li>
             </ul>
         </nav>
     </header>
     <main id="main">
+        <div id="banner">
 
+        </div>
+        <form id="form" action="">
+
+        </form>
+        <article id="benefits">
+            <ul id="benefits-list">
+                <li class="benefits-item">
+
+                </li>
+                <li class="benefits-item">
+
+                </li>
+                <li class="benefits-item">
+
+                </li>
+            </ul>
+        </article>
+        <article id="products">
+            <section class="ships"></section>
+            <section class="ships"></section>
+            <section class="ships"></section>
+        </article>
     </main>
     <footer id="footer">
 
