--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <main id="main">
         <div id="banner">
-
+            <img src="Images/banner-bg.jpg" alt="">
         </div>
         <form id="form" action="">
 
