--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
     <title>Landing Page</title>
 </head>
 <body>
+    <div id="bg"></div>
     <header id="header">
-        <img src="#" alt="Brand">
         <nav id="nav-bar">
+            <img id="logo" src="Images/logo.png" alt="Brand">
             <ul id="nav-links">
-                <li class="nav-link">Benefits</li>
+                <li class="nav-link"><a href="">Benefits</a></li>
                 <li class="nav-link">Ships</li>
                 <li class="nav-link">More</li>
             </ul>
         </nav>
     </header>
     <main id="main">
+        <div id="space"></div>
         <div id="banner">
-            <img src="Images/banner-bg.jpg" alt="">
+            <img src="Images/earth.jpg" alt="">
         </div>
         <form id="form" action="">
 
@@ -28,13 +30,16 @@
         <article id="benefits">
             <ul id="benefits-list">
                 <li class="benefits-item">
-
+                    <p class="big">POWERFUL</p>
+                    <p class="small">7 HARDPOINTS (2 HUGE)</p>
                 </li>
                 <li class="benefits-item">
-
+                    <p class="big">STRONGER</p>
+                    <p class="small">3.5K ARMOUR (ALL 5D)</p>
                 </li>
                 <li class="benefits-item">
-
+                    <p class="big">FASTER</p>
+                    <p class="small">400 m/s BOOST</p>
                 </li>
             </ul>
         </article>
@@ -43,6 +48,7 @@
             <section class="ships"></section>
             <section class="ships"></section>
         </article>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo non cum, quae mollitia iure quisquam. Hic repudiandae laboriosam nostrum tempore nam, illo consectetur sunt accusantium voluptates at ipsam? Itaque, exercitationem. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem corporis nostrum blanditiis itaque repudiandae! Consequatur, facere modi aliquam nisi dolores amet dolorem provident? Et ipsam tempore enim expedita quibusdam ea. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero consectetur, quae blanditiis animi repellendus maxime repudiandae suscipit incidunt? Molestias eum asperiores quibusdam blanditiis ratione repellat architecto nobis repudiandae amet deserunt.</p>
     </main>
     <footer id="footer">
 
