--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav id="nav-bar">
             <img id="logo" src="Images/logo.png" alt="Brand">
             <ul id="nav-links">
-                <li class="nav-link"><a href="">Benefits</a></li>
+                <li class="nav-link"><a href="#products" target="_self">Benefits</a></li>
                 <li class="nav-link">Ships</li>
                 <li class="nav-link">More</li>
             </ul>
