--- a/index.html
+++ b/index.html
@@ -20,13 +20,20 @@
         </nav>
     </header>
     <main id="main">
+
+        <!-- TITLE + SHIP ANIMATION -->
         <div id="space"></div>
         <div id="banner">
-            <img src="Images/earth.jpg" alt="">
+            <h1 class="hidden">Reach The Universe</h1>
+            <div id="titlebox">
+                <p aria-hidden="true" id="title-1" >REACH THE</p>
+                <p aria-hidden="true" id="title-2" >UNIVERSE</p>
+                <p aria-hidden="true" id="subtitle">The best for you to face the unknown</p>
+            </div>
+            <img id="ship" src="Images/vulture.png" alt="">
         </div>
-        <form id="form" action="">
 
-        </form>
+        <!-- BENEFITS -->
         <article id="benefits">
             <ul id="benefits-list">
                 <li class="benefits-item">
@@ -43,6 +50,13 @@
                 </li>
             </ul>
         </article>
+
+        <!-- FORM -->
+        <form id="form" action="">
+
+        </form>
+
+        <!-- SHIP MODELS -->
         <article id="products">
             <section class="ships"></section>
             <section class="ships"></section>
@@ -50,6 +64,20 @@
         </article>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo non cum, quae mollitia iure quisquam. Hic repudiandae laboriosam nostrum tempore nam, illo consectetur sunt accusantium voluptates at ipsam? Itaque, exercitationem. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem corporis nostrum blanditiis itaque repudiandae! Consequatur, facere modi aliquam nisi dolores amet dolorem provident? Et ipsam tempore enim expedita quibusdam ea. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero consectetur, quae blanditiis animi repellendus maxime repudiandae suscipit incidunt? Molestias eum asperiores quibusdam blanditiis ratione repellat architecto nobis repudiandae amet deserunt.</p>
     </main>
+
+        <!-- TESTIMONIALS -->
+        <article id="testimonials">
+            <section class="testimonial">
+                <img src="" alt="">
+                <p></p>
+            </section>
+            <section class="testimonial">
+
+            </section>
+            <section class="testimonial">
+
+            </section>
+        </article>
     <footer id="footer">
 
     </footer>
