--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div id="bg"></div>
     <header id="header">
         <nav id="nav-bar">
-            <img id="logo" src="Images/logo.png" alt="Brand">
+            <img id="header-img" src="Images/logo.png" alt="Brand">
             <ul id="nav-links">
-                <li class="nav-link"><a href="#products" target="_self">Benefits</a></li>
-                <li class="nav-link">Ships</li>
-                <li class="nav-link">More</li>
+                <li class="nav-link"><a href="#benefits" target="_self">Benefits</a></li>
+                <li class="nav-link"><a href="#ships" target="_self">Ships</a></li>
+                <li class="nav-link"><a href="testimonials">More</a></li>
             </ul>
         </nav>
     </header>
@@ -57,14 +57,23 @@
         </form>
 
         <!-- SHIP MODELS -->
-        <article id="products">
-            <section class="ships"></section>
-            <section class="ships"></section>
-            <section class="ships"></section>
-        </article>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo non cum, quae mollitia iure quisquam. Hic repudiandae laboriosam nostrum tempore nam, illo consectetur sunt accusantium voluptates at ipsam? Itaque, exercitationem. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem corporis nostrum blanditiis itaque repudiandae! Consequatur, facere modi aliquam nisi dolores amet dolorem provident? Et ipsam tempore enim expedita quibusdam ea. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero consectetur, quae blanditiis animi repellendus maxime repudiandae suscipit incidunt? Molestias eum asperiores quibusdam blanditiis ratione repellat architecto nobis repudiandae amet deserunt.</p>
-    </main>
+        <article id="ships">
+            <section class="ships">
 
+            </section>
+            <section class="ships">
+
+            </section>
+            <section class="ships">
+
+            </section>
+        </article>
+
+        <!-- VIDEO -->
+        <video id="video" src="">
+
+        </video>
+        
         <!-- TESTIMONIALS -->
         <article id="testimonials">
             <section class="testimonial">
@@ -78,6 +87,8 @@
 
             </section>
         </article>
+    </main>
+
     <footer id="footer">
 
     </footer>
