--- a/index.html
+++ b/index.html
@@ -52,8 +52,47 @@
         </article>
 
         <!-- FORM -->
-        <form id="form" action="">
-
+        <form id="form" action="#">
+            <h1 id="form-title"></h1>
+            <div class="fgroup">
+                <label id="name-label" for="name">Name</label>
+                <input id="name" class="fcontrol" type="text" name="name" placeholder="Enter your name" required>
+            </div>
+            <div class="fgroup">
+                <label id="email-label" for="email">Email</label>
+                <input id="email" class="fcontrol" type="email" name="email" placeholder="Enter your email" required>
+            </div>
+            <div class="fgroup">
+                <fieldset id="roles">
+                    <legend>Roles</legend>
+                    <div id="role-types">
+                        <label><input type="checkbox" name="roles" class="fcontrol" value="courier">Courier</label>
+                        <label><input type="checkbox" name="roles" class="fcontrol" value="trader">Trader</label>
+                        <label><input type="checkbox" name="roles" class="fcontrol" value="explorer">Explorer</label>
+                        <label><input type="checkbox" name="roles" class="fcontrol" value="miner">Miner</label>
+                        <label><input type="checkbox" name="roles" class="fcontrol" value="smuggler">Smuggler</label>
+                        <label><input type="checkbox" name="roles" class="fcontrol" value="pirate">Pirate</label>
+                        <label><input type="checkbox" name="roles" class="fcontrol" value="mercenary">Mercenary</label>
+                        <label><input type="checkbox" name="roles" class="fcontrol" value="assassin">Assassin</label>
+                        <label><input type="checkbox" name="roles" class="fcontrol" value="bounty-hunter">Bounty Hunter</label>
+                        <label><input type="checkbox" name="roles" class="fcontrol" value="passenger-carrier">Passenger Carrier</label>
+                        <label><input type="checkbox" name="roles" class="fcontrol" value="multicrew">Multicrew</label>
+                        <label><input type="checkbox" name="roles" class="fcontrol" value="scavenger">Scavenger</label>
+                        <label><input type="checkbox" name="roles" class="fcontrol" value="infiltrator">Infiltrator</label>
+                        <label><input type="checkbox" name="roles" class="fcontrol" value="support">Support</label>
+                        <label><input type="checkbox" name="roles" class="fcontrol" value="search-rescue">Search and Rescue</label>
+                    </div>
+                </fieldset>
+            </div>
+            <div class="fgroup">
+                <fieldset id="terms">
+                    <legend>Terms and Conditions</legend>
+                    <label><input type="checkbox" name="terms" class="fcontrol" required>Check here to indicate that you have read and agree to the <a id="terms-link" href="#" target="_blank">terms of the Core Dynamics Customer Agreement</a></label>
+                </fieldset>
+            </div>
+            <div class="fgroup">
+                <button type="submit" id="submit">Submit</button>
+            </div>
         </form>
 
         <!-- SHIP MODELS -->
