--- a/index.html
+++ b/index.html
@@ -66,28 +66,28 @@
                 <fieldset id="roles">
                     <legend><h2>Roles</h2></legend>
                     <div id="role-types">
-                        <label><input type="checkbox" name="roles" class="fcontrol" value="assassin">Assassin</label>
-                        <label><input type="checkbox" name="roles" class="fcontrol" value="bounty-hunter">Bounty Hunter</label>
-                        <label><input type="checkbox" name="roles" class="fcontrol" value="courier">Courier</label>
-                        <label><input type="checkbox" name="roles" class="fcontrol" value="explorer">Explorer</label>
-                        <label><input type="checkbox" name="roles" class="fcontrol" value="infiltrator">Infiltrator</label>
-                        <label><input type="checkbox" name="roles" class="fcontrol" value="mercenary">Mercenary</label>
-                        <label><input type="checkbox" name="roles" class="fcontrol" value="miner">Miner</label>
-                        <label><input type="checkbox" name="roles" class="fcontrol" value="multicrew">Multicrew</label>
-                        <label><input type="checkbox" name="roles" class="fcontrol" value="passenger-carrier">Passenger Carrier</label>
-                        <label><input type="checkbox" name="roles" class="fcontrol" value="pirate">Pirate</label>
-                        <label><input type="checkbox" name="roles" class="fcontrol" value="scavenger">Scavenger</label>
-                        <label><input type="checkbox" name="roles" class="fcontrol" value="search-rescue">Search and Rescue</label>
-                        <label><input type="checkbox" name="roles" class="fcontrol" value="smuggler">Smuggler</label>
-                        <label><input type="checkbox" name="roles" class="fcontrol" value="support">Support</label>
-                        <label><input type="checkbox" name="roles" class="fcontrol" value="trader">Trader</label>
+                        <label><input type="checkbox" name="roles" class="checkcontrol" value="assassin">Assassin</label>
+                        <label><input type="checkbox" name="roles" class="checkcontrol" value="bounty-hunter">Bounty Hunter</label>
+                        <label><input type="checkbox" name="roles" class="checkcontrol" value="courier">Courier</label>
+                        <label><input type="checkbox" name="roles" class="checkcontrol" value="explorer">Explorer</label>
+                        <label><input type="checkbox" name="roles" class="checkcontrol" value="infiltrator">Infiltrator</label>
+                        <label><input type="checkbox" name="roles" class="checkcontrol" value="mercenary">Mercenary</label>
+                        <label><input type="checkbox" name="roles" class="checkcontrol" value="miner">Miner</label>
+                        <label><input type="checkbox" name="roles" class="checkcontrol" value="multicrew">Multicrew</label>
+                        <label><input type="checkbox" name="roles" class="checkcontrol" value="passenger-carrier">Passenger Carrier</label>
+                        <label><input type="checkbox" name="roles" class="checkcontrol" value="pirate">Pirate</label>
+                        <label><input type="checkbox" name="roles" class="checkcontrol" value="scavenger">Scavenger</label>
+                        <label><input type="checkbox" name="roles" class="checkcontrol" value="search-rescue">Search and Rescue</label>
+                        <label><input type="checkbox" name="roles" class="checkcontrol" value="smuggler">Smuggler</label>
+                        <label><input type="checkbox" name="roles" class="checkcontrol" value="support">Support</label>
+                        <label><input type="checkbox" name="roles" class="checkcontrol" value="trader">Trader</label>
                     </div>
                 </fieldset>
             </div>
             <div class="fgroup">
                 <fieldset id="terms">
                     <legend><h2>Terms and Conditions</h2></legend>
-                    <label><input type="checkbox" name="terms" class="fcontrol" required>Check here to indicate that you have read and agree to the <a id="terms-link" href="#" target="_blank">terms of the Core Dynamics Customer Agreement</a></label>
+                    <label><input type="checkbox" name="terms" class="checkcontrol" required>Check here to indicate that you have read and agree to the <a id="terms-link" href="#" target="_blank">terms of the Core Dynamics Customer Agreement</a></label>
                 </fieldset>
             </div>
             <div class="fgroup">
