--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@
                     <p class="small">400 m/s BOOST</p>
                 </li>
             </ul>
+            <img id="signup-now" src="Images/signup-now.svg" alt="Sign up now!">
         </article>
 
         <!-- FORM -->
         <form id="form" action="#">
-            <h1 id="form-title">Sign up!</h1>
+            <h1 id="form-title">Sign up</h1>
             <div class="fgroup">
                 <label id="name-label" for="name"><h2>Name</h2></label>
                 <input id="name" class="fcontrol" type="text" name="name" placeholder="Enter your name" required>
@@ -66,35 +67,35 @@
                 <fieldset id="roles">
                     <legend><h2>Roles</h2></legend>
                     <div id="role-types">
-                        <label><input type="checkbox" name="roles" class="checkcontrol" value="assassin">Assassin</label>
-                        <label><input type="checkbox" name="roles" class="checkcontrol" value="bounty-hunter">Bounty Hunter</label>
-                        <label><input type="checkbox" name="roles" class="checkcontrol" value="courier">Courier</label>
-                        <label><input type="checkbox" name="roles" class="checkcontrol" value="explorer">Explorer</label>
-                        <label><input type="checkbox" name="roles" class="checkcontrol" value="infiltrator">Infiltrator</label>
-                        <label><input type="checkbox" name="roles" class="checkcontrol" value="mercenary">Mercenary</label>
-                        <label><input type="checkbox" name="roles" class="checkcontrol" value="miner">Miner</label>
-                        <label><input type="checkbox" name="roles" class="checkcontrol" value="multicrew">Multicrew</label>
-                        <label><input type="checkbox" name="roles" class="checkcontrol" value="passenger-carrier">Passenger Carrier</label>
-                        <label><input type="checkbox" name="roles" class="checkcontrol" value="pirate">Pirate</label>
-                        <label><input type="checkbox" name="roles" class="checkcontrol" value="scavenger">Scavenger</label>
-                        <label><input type="checkbox" name="roles" class="checkcontrol" value="search-rescue">Search and Rescue</label>
-                        <label><input type="checkbox" name="roles" class="checkcontrol" value="smuggler">Smuggler</label>
-                        <label><input type="checkbox" name="roles" class="checkcontrol" value="support">Support</label>
-                        <label><input type="checkbox" name="roles" class="checkcontrol" value="trader">Trader</label>
+                        <label><input type="checkbox" name="roles" class="checkbox" value="assassin">Assassin</label>
+                        <label><input type="checkbox" name="roles" class="checkbox" value="bounty-hunter">Bounty Hunter</label>
+                        <label><input type="checkbox" name="roles" class="checkbox" value="courier">Courier</label>
+                        <label><input type="checkbox" name="roles" class="checkbox" value="explorer">Explorer</label>
+                        <label><input type="checkbox" name="roles" class="checkbox" value="infiltrator">Infiltrator</label>
+                        <label><input type="checkbox" name="roles" class="checkbox" value="mercenary">Mercenary</label>
+                        <label><input type="checkbox" name="roles" class="checkbox" value="miner">Miner</label>
+                        <label><input type="checkbox" name="roles" class="checkbox" value="multicrew">Multicrew</label>
+                        <label><input type="checkbox" name="roles" class="checkbox" value="passenger-carrier">Passenger Carrier</label>
+                        <label><input type="checkbox" name="roles" class="checkbox" value="pirate">Pirate</label>
+                        <label><input type="checkbox" name="roles" class="checkbox" value="scavenger">Scavenger</label>
+                        <label><input type="checkbox" name="roles" class="checkbox" value="search-rescue">Search and Rescue</label>
+                        <label><input type="checkbox" name="roles" class="checkbox" value="smuggler">Smuggler</label>
+                        <label><input type="checkbox" name="roles" class="checkbox" value="support">Support</label>
+                        <label><input type="checkbox" name="roles" class="checkbox" value="trader">Trader</label>
                     </div>
                 </fieldset>
             </div>
             <div class="fgroup">
                 <fieldset id="terms">
                     <legend><h2>Terms and Conditions</h2></legend>
-                    <label><input type="checkbox" name="terms" class="checkcontrol" required>Check here to indicate that you have read and agree to the <a id="terms-link" href="#" target="_blank">terms of the Core Dynamics Customer Agreement</a></label>
+                    <label><input type="checkbox" name="terms" class="checkbox" required>Check here to indicate that you have read and agree to the <a id="terms-link" href="#" target="_blank">terms of the Core Dynamics Customer Agreement</a></label>
                 </fieldset>
             </div>
             <div class="fgroup">
                 <button type="submit" id="submit">Submit</button>
             </div>
         </form>
-
+        
         <!-- SHIP MODELS -->
         <article id="ships">
             <section class="ships">
