--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             </ul>
         </nav>
     </header>
+    <div id="space"></div>
     <main id="main">
 
         <!-- TITLE + SHIP ANIMATION -->
-        <div id="space"></div>
         <div id="banner">
             <h1 class="hidden">Reach The Universe</h1>
             <div id="titlebox">
@@ -50,6 +50,34 @@
                 </li>
             </ul>
             <img id="signup-now" src="Images/signup-now.svg" alt="Sign up now!">
+        </article>
+
+        <!-- SHIP MODELS -->
+        <article id="ships">
+            <section class="ships">
+                <figure id="vulture">
+                    <img src="Images/ship-vulture.png" alt="Vulture Ship">
+                    <figcaption>
+                        Vulture
+                    </figcaption>
+                </figure>
+            </section>
+            <section class="ships">
+                <figure id="vulture">
+                    <img src="Images/ship-vulture.png" alt="Vulture Ship">
+                    <figcaption>
+                        Vulture
+                    </figcaption>
+                </figure>
+            </section>
+            <section class="ships">
+                <figure id="vulture">
+                    <img src="Images/ship-vulture.png" alt="Vulture Ship">
+                    <figcaption>
+                        Vulture
+                    </figcaption>
+                </figure>
+            </section>
         </article>
 
         <!-- FORM -->
@@ -96,19 +124,6 @@
             </div>
         </form>
         
-        <!-- SHIP MODELS -->
-        <article id="ships">
-            <section class="ships">
-
-            </section>
-            <section class="ships">
-
-            </section>
-            <section class="ships">
-
-            </section>
-        </article>
-
         <!-- VIDEO -->
         <video id="video" src="">
 
@@ -117,8 +132,7 @@
         <!-- TESTIMONIALS -->
         <article id="testimonials">
             <section class="testimonial">
-                <img src="" alt="">
-                <p></p>
+
             </section>
             <section class="testimonial">
 
