--- a/index.html
+++ b/index.html
@@ -56,25 +56,25 @@
         <article id="ships">
             <section class="ships">
                 <figure id="vulture">
-                    <img src="Images/ship-vulture.png" alt="Vulture Ship">
+                    <img src="Images/vulture.png" alt="Vulture Ship">
                     <figcaption>
                         Vulture
                     </figcaption>
                 </figure>
             </section>
             <section class="ships">
-                <figure id="vulture">
-                    <img src="Images/ship-vulture.png" alt="Vulture Ship">
+                <figure id="federal-gunship">
+                    <img src="Images/vulture.png" alt="Federal Gunship">
                     <figcaption>
-                        Vulture
+                        Federal Gunship
                     </figcaption>
                 </figure>
             </section>
             <section class="ships">
-                <figure id="vulture">
-                    <img src="Images/ship-vulture.png" alt="Vulture Ship">
+                <figure id="federal-corvette">
+                    <img src="Images/vulture.png" alt="Federal Corvette">
                     <figcaption>
-                        Vulture
+                        Federal Corvette
                     </figcaption>
                 </figure>
             </section>
