--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <article id="ships">
             <section class="ships">
                 <figure id="vulture">
-                    <img src="Images/vulture.png" alt="Vulture Ship">
+                    <img src="Images/vulture-ship.jpg" alt="Vulture Ship">
                     <figcaption>
                         Vulture
                     </figcaption>
@@ -64,7 +64,7 @@
             </section>
             <section class="ships">
                 <figure id="federal-gunship">
-                    <img src="Images/vulture.png" alt="Federal Gunship">
+                    <img src="Images/gunship-ship.jpg" alt="Federal Gunship">
                     <figcaption>
                         Federal Gunship
                     </figcaption>
@@ -72,7 +72,7 @@
             </section>
             <section class="ships">
                 <figure id="federal-corvette">
-                    <img src="Images/vulture.png" alt="Federal Corvette">
+                    <img src="Images/corvette-ship.jpg" alt="Federal Corvette">
                     <figcaption>
                         Federal Corvette
                     </figcaption>
@@ -119,7 +119,7 @@
                     <label><input type="checkbox" name="terms" class="checkbox" required>Check here to indicate that you have read and agree to the <a id="terms-link" href="#" target="_blank">terms of the Core Dynamics Customer Agreement</a></label>
                 </fieldset>
             </div>
-            <div class="fgroup">
+            <div id="submit-div" class="fgroup">
                 <button type="submit" id="submit">Submit</button>
             </div>
         </form>
