video and some media queries

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul id="nav-links">
                 <li class="nav-link"><a href="#benefits" target="_self">Benefits</a></li>
                 <li class="nav-link"><a href="#ships" target="_self">Ships</a></li>
-                <li class="nav-link"><a href="testimonials">More</a></li>
+                <li class="nav-link"><a href="#video" target="_self">More</a></li>
             </ul>
         </nav>
     </header>
@@ -81,7 +81,7 @@
         </article>
 
         <!-- FORM -->
-        <form id="form" action="#">
+        <form id="form" action="https://www.freecodecamp.com/email-submit">
             <h1 id="form-title">Sign up</h1>
             <div class="fgroup">
                 <label id="name-label" for="name"><h2>Name</h2></label>
@@ -120,15 +120,14 @@
                 </fieldset>
             </div>
             <div id="submit-div" class="fgroup">
-                <button type="submit" id="submit">Submit</button>
+                <button type="submit" id="submit" value="submit">Submit</button>
             </div>
         </form>
         
         <!-- VIDEO -->
-        <video id="video" src="">
-
-        </video>
-
+        <div id="video-wraper">
+        <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/VflbALuYeMI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
     </main>
 
     <footer id="footer">
