--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </main>
 
     <footer id="footer">
-
+        <p>This page was created by <a href="https://github.com/PERicci" rel="external" target="_blank">Pedro Eugenio Ricciardi</a></p>
     </footer>
 </body>
 </html>
