--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <nav id="nav-bar">
             <img id="header-img" src="Images/logo.png" alt="Brand">
             <ul id="nav-links">
-                <li class="nav-link"><a href="#benefits" target="_self">Benefits</a></li>
-                <li class="nav-link"><a href="#ships" target="_self">Ships</a></li>
-                <li class="nav-link"><a href="#video" target="_self">More</a></li>
+                <li><a class="nav-link" href="#benefits" target="_self">Benefits</a></li>
+                <li><a class="nav-link" href="#ships" target="_self">Ships</a></li>
+                <li><a class="nav-link" href="#video" target="_self">More</a></li>
             </ul>
         </nav>
     </header>
@@ -120,7 +120,7 @@
                 </fieldset>
             </div>
             <div id="submit-div" class="fgroup">
-                <button type="submit" id="submit" value="submit">Submit</button>
+                <input type="submit" id="submit" value="Submit">
             </div>
         </form>
         
